--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,25 @@ node_modules/
 .env.local
 .env*
 !.env.example
+
+# Python
+.venv/
+__pycache__/
+*.py[cod]
+*.egg-info/
+.ruff_cache/
+.pytest_cache/
+.coverage/
+*.log
+
+# Frontend build output
+dist/
+.next/
+*.tsbuildinfo
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# OS / editors
+.DS_Store
+Thumbs.db
